@@ -29,6 +29,8 @@ class Net::SSLeay::X509_NAME : pointer {
   
   native method add_entry_by_NID : int ($nid : int, $type : int, $bytes : string, $len : int = -1, $loc : int = -1, $set : int = 0);
   
+  native method delete_entry : Net::SSLeay::X509_NAME_ENTRY ($loc : int);
+  
   native method DESTROY : void ();
   
 }
